Clarifying flight info

--- a/sections/travel-info.html
+++ b/sections/travel-info.html
@@ -340,7 +340,7 @@
             <div id="travel-tabs-container">
                 <div id="flights" class="tab-content active">
                     <div class="alert-box success">
-                        <h4 style="margin-bottom: 0.5rem;">✅ Booking Confirmed</h4>
+                        <h4 style="margin-bottom: 0.5rem;">✅ Booking/Flight Confirmed</h4>
                         <p style="font-size: 1.1rem; margin: 0;"><strong>Booking Reference:</strong> 4KUETI</p>
                         <p style="font-size: 0.9rem; margin-top: 0.3rem;">TravelPerk Trip ID: 27558237</p>
                     </div>
