--- a/sections/travel-info.html
+++ b/sections/travel-info.html
@@ -340,9 +340,15 @@
             <div id="travel-tabs-container">
                 <div id="flights" class="tab-content active">
                     <div class="alert-box success">
-                        <h4 style="margin-bottom: 0.5rem;">✅ Booking/Flight Confirmed</h4>
+                        <h4 style="margin-bottom: 0.5rem;">✅ Booking Confirmed</h4>
                         <p style="font-size: 1.1rem; margin: 0;"><strong>Booking Reference:</strong> 4KUETI</p>
                         <p style="font-size: 0.9rem; margin-top: 0.3rem;">TravelPerk Trip ID: 27558237</p>
+                    </div>
+                    
+                    <div class="alert-box info" style="margin-top: 1rem;">
+                        <h4 style="margin-bottom: 0.5rem;">📱 ArriveCAN Required for Canada Entry</h4>
+                        <p style="margin: 0.3rem 0;"><strong>Download the ArriveCAN app before departure</strong> to complete your customs declaration in advance.</p>
+                        <p style="margin: 0.3rem 0; font-size: 0.9rem;">Submit within 72 hours before arrival. One submission covers all 3 passengers.</p>
                     </div>
                     
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 1.5rem;">
@@ -416,6 +422,7 @@
                         <h4 style="margin-bottom: 0.5rem;">✓ Flight Checklist</h4>
                         <ul style="margin: 0.5rem 0 0 1.2rem; padding: 0;">
                             <li>Valid passport required (expires after Dec 28, 2025)</li>
+                            <li>Download ArriveCAN app and submit declaration within 72 hours before arrival</li>
                             <li>Arrive at airport 2 hours before departure</li>
                             <li>Business class includes 2 checked bags (50 lbs each)</li>
                             <li>Priority boarding and lounge access included</li>
