Fixed flight info

--- a/sections/travel-info.html
+++ b/sections/travel-info.html
@@ -358,12 +358,12 @@
                             <div style="margin-bottom: 0.3rem;"><strong>Date:</strong> Tuesday, June 24, 2025</div>
                             <div style="margin-bottom: 0.3rem;"><strong>Airline:</strong> Air Canada</div>
                             <div style="margin-bottom: 0.3rem;"><strong>Flight:</strong> AC 8817</div>
-                            <div style="margin-bottom: 0.3rem;"><strong>Departure:</strong> 6:00 AM (PHX)</div>
-                            <div style="margin-bottom: 0.3rem;"><strong>Arrival:</strong> 9:15 AM (YVR)</div>
-                            <div style="margin-bottom: 0.3rem;"><strong>Duration:</strong> 3h 15m</div>
+                            <div style="margin-bottom: 0.3rem;"><strong>Departure:</strong> 12:25 PM (PHX)</div>
+                            <div style="margin-bottom: 0.3rem;"><strong>Arrival:</strong> 3:38 PM (YVR)</div>
+                            <div style="margin-bottom: 0.3rem;"><strong>Duration:</strong> 3h 13m</div>
                             <div style="margin-bottom: 0.3rem;"><strong>Terminal:</strong> 4 at PHX</div>
                             <div style="margin-top: 0.8rem; padding: 0.8rem; background: #e3f2fd; border-radius: 6px;">
-                                <p style="margin: 0; font-size: 0.9rem;"><strong>Check-in opens:</strong> June 23 at 6:00 AM</p>
+                                <p style="margin: 0; font-size: 0.9rem;"><strong>Check-in opens:</strong> June 23 at 12:25 PM</p>
                                 <p style="margin: 0.3rem 0 0; font-size: 0.85rem; color: #666;">Business class includes priority check-in</p>
                             </div>
                         </div>
@@ -373,7 +373,7 @@
                             <div style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">YVR → PHX</div>
                             <div style="margin-bottom: 0.3rem;"><strong>Date:</strong> Saturday, June 28, 2025</div>
                             <div style="margin-bottom: 0.3rem;"><strong>Airline:</strong> Air Canada</div>
-                            <div style="margin-bottom: 0.3rem;"><strong>Flight:</strong> AC 8810</div>
+                            <div style="margin-bottom: 0.3rem;"><strong>Flight:</strong> AC 8816</div>
                             <div style="margin-bottom: 0.3rem;"><strong>Departure:</strong> 4:35 PM (YVR)</div>
                             <div style="margin-bottom: 0.3rem;"><strong>Arrival:</strong> 7:42 PM (PHX)</div>
                             <div style="margin-bottom: 0.3rem;"><strong>Duration:</strong> 3h 07m</div>
@@ -436,7 +436,7 @@
                             <li>Arrive at airport 2 hours before departure</li>
                             <li>Business class includes 2 checked bags (50 lbs each)</li>
                             <li>Priority boarding and lounge access included</li>
-                            <li>Check-in online starting June 23 at 6:00 AM</li>
+                            <li>Check-in online starting June 23 at 12:25 PM</li>
                         </ul>
                     </div>
                 </div>
@@ -454,7 +454,7 @@
                             <h4 style="color: #3498db; margin-bottom: 0.5rem;">Arrival Transfer (June 24)</h4>
                             <p style="font-size: 1rem; margin: 0.3rem 0;"><strong>YVR Airport → Fairmont Chateau Whistler</strong></p>
                             <p style="margin: 0.3rem 0;">📍 <strong>Pickup:</strong> YVR Airport Arrivals</p>
-                            <p style="margin: 0.3rem 0;">🕐 <strong>Time:</strong> After 9:15 AM arrival</p>
+                            <p style="margin: 0.3rem 0;">🕐 <strong>Time:</strong> After 3:38 PM arrival</p>
                             <p style="margin: 0.3rem 0;">🚗 <strong>Service:</strong> Luxury Transport</p>
                             <p style="margin: 0.3rem 0;">⏱️ <strong>Duration:</strong> ~2.5 hours</p>
                             <div style="margin-top: 0.8rem; padding: 0.8rem; background: #e3f2fd; border-radius: 6px;">
@@ -499,13 +499,14 @@
                     
                     <div class="timeline-item day1">
                         <h4 style="color: #856404;">Tuesday, June 24</h4>
-                        <p>✈️ 6:00 AM - Depart Phoenix (PHX)</p>
-                        <p>✈️ 9:15 AM - Arrive Vancouver (YVR)</p>
-                        <p>🚗 9:45 AM - Meet driver at baggage claim</p>
-                        <p>🏔️ 12:30 PM - Arrive at Fairmont Chateau Whistler</p>
+                        <p>✈️ 12:25 PM - Depart Phoenix (PHX)</p>
+                        <p>✈️ 3:38 PM - Arrive Vancouver (YVR)</p>
+                        <p>🚗 4:15 PM - Meet driver at baggage claim</p>
+                        <p>🏔️ 6:45 PM - Estimated arrival at Fairmont Chateau Whistler</p>
                         <p style="font-size: 0.9rem; color: #666; margin-left: 1rem;"><em>4599 Chateau Blvd, Whistler, BC V8E 0Z5</em></p>
                         <p>🥂 6:00 PM - Welcome Reception (Hotel)</p>
                         <p>🍽️ 7:00 PM - Welcome Dinner (Hotel - Wildflower Restaurant)</p>
+                        <p style="font-size: 0.85rem; color: #e74c3c; margin-top: 0.5rem;"><em>Note: Late arrival may miss the beginning of Welcome Reception</em></p>
                     </div>
                     
                     <div class="timeline-item day2">
