updated key observations

--- a/sections/financial-info.html
+++ b/sections/financial-info.html
@@ -793,11 +793,11 @@
                     <div style="margin-top: 1.5rem; padding: 1rem; background: #d1ecf1; border-radius: 8px;">
                         <h5 style="color: #0c5460; margin-bottom: 0.5rem;">Key Observations (June 30, 2025):</h5>
                         <ul style="list-style: none; padding: 0; color: #0c5460; font-size: 0.9rem;">
-                            <li style="margin-bottom: 0.3rem;">✓ Exceptional loss ratio of 11.34% (industry average 40-60%)</li>
-                            <li style="margin-bottom: 0.3rem;">✓ Workers Compensation severity increased but remains manageable</li>
-                            <li style="margin-bottom: 0.3rem;">✓ Auto Liability claims well controlled with low average severity</li>
-                            <li style="margin-bottom: 0.3rem;">✓ No General Liability claims this year</li>
-                            <li style="color: #e67e22; font-weight: 600;">⚠️ APD frequency (12 claims) requires immediate attention</li>
+                            <li style="margin-bottom: 0.3rem;">✔ Exceptional loss ratio of 11.34% (industry average 40-60%)</li>
+                            <li style="margin-bottom: 0.3rem;">⚠️ Workers Compensation frequency (12 claims) indicates safety concerns</li>
+                            <li style="margin-bottom: 0.3rem;">✔ Average claim severity remains manageable at $2,686 per claim</li>
+                            <li style="margin-bottom: 0.3rem;">✔ No General Liability claims this year</li>
+                            <li style="color: #e67e22; font-weight: 600;">⚠️ WC frequency of >1 per month requires immediate safety review</li>
                         </ul>
                     </div>
                 </div>
