--- a/sections/financial-info.html
+++ b/sections/financial-info.html
@@ -560,7 +560,7 @@
             <div class="kpi-item clickable orange-gradient" onclick="showKPIDetail('claims')">
                 <div class="kpi-value">23</div>
                 <div class="kpi-label">Total Claims YTD ⚠️</div>
-                <div style="font-size: 0.8rem; opacity: 0.9;">12 APD claims</div>
+                <div style="font-size: 0.8rem; opacity: 0.9;">12 WC claims</div>
                 <div style="font-size: 0.7rem; opacity: 0.7; margin-top: 0.3rem;">Click for details</div>
             </div>
         </div>
@@ -876,7 +876,7 @@
                     </p>
                     <p style="margin: 0.5rem 0 0; color: #155724; font-size: 0.85rem;">
                         With your 11.34% loss ratio, you're significantly outperforming industry benchmarks! 
-                        Focus on addressing the APD frequency issue to maintain this exceptional performance.
+                        Focus on addressing the WC frequency issue to maintain this exceptional performance.
                     </p>
                 </div>
             </div>
@@ -1220,17 +1220,17 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr style="border-bottom: 1px solid #dee2e6;">
-                                            <td style="padding: 0.8rem;">Workers Compensation</td>
-                                            <td style="text-align: center; padding: 0.8rem;">5</td>
+                                        <tr style="border-bottom: 1px solid #dee2e6; background: #fff3cd;">
+                                            <td style="padding: 0.8rem;">Workers Compensation ⚠️</td>
+                                            <td style="text-align: center; padding: 0.8rem; color: #e67e22; font-weight: 600;">12</td>
                                             <td style="text-align: right; padding: 0.8rem;">$26,785</td>
-                                            <td style="text-align: right; padding: 0.8rem;">$5,357</td>
+                                            <td style="text-align: right; padding: 0.8rem;">$2,232</td>
                                         </tr>
                                         <tr style="border-bottom: 1px solid #dee2e6;">
                                             <td style="padding: 0.8rem;">Auto Liability</td>
-                                            <td style="text-align: center; padding: 0.8rem;">6</td>
+                                            <td style="text-align: center; padding: 0.8rem;">5</td>
                                             <td style="text-align: right; padding: 0.8rem;">$15,773</td>
-                                            <td style="text-align: right; padding: 0.8rem;">$2,629</td>
+                                            <td style="text-align: right; padding: 0.8rem;">$3,155</td>
                                         </tr>
                                         <tr style="border-bottom: 1px solid #dee2e6;">
                                             <td style="padding: 0.8rem;">General Liability</td>
@@ -1238,11 +1238,11 @@
                                             <td style="text-align: right; padding: 0.8rem;">$0</td>
                                             <td style="text-align: right; padding: 0.8rem;">$0</td>
                                         </tr>
-                                        <tr style="border-bottom: 1px solid #dee2e6; background: #fff3cd;">
-                                            <td style="padding: 0.8rem;">Auto Physical Damage ⚠️</td>
-                                            <td style="text-align: center; padding: 0.8rem; color: #e67e22; font-weight: 600;">12</td>
+                                        <tr style="border-bottom: 1px solid #dee2e6;">
+                                            <td style="padding: 0.8rem;">Auto Physical Damage</td>
+                                            <td style="text-align: center; padding: 0.8rem;">6</td>
                                             <td style="text-align: right; padding: 0.8rem;">$19,231</td>
-                                            <td style="text-align: right; padding: 0.8rem;">$1,603</td>
+                                            <td style="text-align: right; padding: 0.8rem;">$3,205</td>
                                         </tr>
                                         <tr style="background: #e3f2fd;">
                                             <td style="padding: 0.8rem; font-weight: 700;">Total</td>
@@ -1255,19 +1255,19 @@
                             </div>
                             
                             <div style="background: #fff3cd; padding: 1rem; border-radius: 6px; margin-bottom: 1rem;">
-                                <h5 style="color: #856404; margin-bottom: 0.5rem;">⚠️ Auto Physical Damage Alert</h5>
+                                <h5 style="color: #856404; margin-bottom: 0.5rem;">⚠️ Workers Compensation Alert</h5>
                                 <p style="margin: 0; color: #856404; font-size: 0.9rem;">
-                                    12 APD claims represent 52% of total claim frequency. While severity is low ($1,603 average), 
-                                    this frequency indicates potential issues with driver training or vehicle maintenance. 
-                                    Consider implementing additional safety programs.
+                                    12 WC claims represent 52% of total claim frequency. With more than 1 workplace injury per month, 
+                                    this indicates potential safety program deficiencies. While severity is manageable ($2,232 average), 
+                                    the frequency demands immediate safety review and enhanced training programs.
                                 </p>
                             </div>
                             
                             <div style="background: #cfe2ff; padding: 1rem; border-radius: 6px;">
                                 <h5 style="color: #084298; margin-bottom: 0.5rem;">Claims Frequency Analysis</h5>
                                 <p style="margin: 0; color: #084298; font-size: 0.9rem;">
-                                    With 23 claims in 11 months, you're averaging 2.1 claims per month. Despite the increased frequency, 
-                                    your low severity and excellent loss ratio of 11.34% demonstrate strong overall risk management.
+                                    With 23 claims in 11 months, you're averaging 2.1 claims per month. Despite the elevated WC frequency, 
+                                    your overall loss ratio of 11.34% remains exceptional due to good severity control across all coverage types.
                                 </p>
                             </div>
                         </div>
