commented out travel and board meeting info

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
     <div class="header">
     <h1><b>Encore Landscape Management</b></h1>
     <div class="subtitle">REvolution Insurance, LTD. - Member 800017 Dashboard</div>
-    <div style="font-size: 1rem; margin-top: 0.5rem; opacity: 0.95;">Board of Directors Meeting - June 24-28 at the Fairmont Chateau Whistler, BC, Canada</div>
-    <div style="margin-top: 1.5rem;">
+    <!-- Commented out for future use - next board meeting details will go here -->
+    <!-- <div style="font-size: 1rem; margin-top: 0.5rem; opacity: 0.95;">Board of Directors Meeting - June 24-28 at the Fairmont Chateau Whistler, BC, Canada</div> -->
+    <!-- Commented out Travel Info and Board Meeting buttons - will be re-enabled for next meeting -->
+    <!-- <div style="margin-top: 1.5rem;">
         <button class="logistics-button" onclick="loadSection('travel-info')">✈️ Travel Info</button>
         <button class="logistics-button" onclick="loadSection('board-meeting')">📋 Board Meeting</button>
-    </div>
+    </div> -->
 </div>
 
 <!-- Main Navigation -->
